updated products and product-single

--- a/products.html
+++ b/products.html
@@ -96,19 +96,19 @@
                                     <li class="clearfix">
                                         <img src="images/resource/languages/arabic.png" alt="item1" />
                                         <span class="item-name">العربية</span>
-                                        <a href="shop-single.html" class="product-detail"></a>
+                                        <a href="#" class="product-detail"></a>
                                     </li>
 
                                     <li class="clearfix">
                                         <img src="images/resource/languages/english.png" alt="item1" />
                                         <span class="item-name">English</span>
-                                        <a href="shop-single.html" class="product-detail"></a>
+                                        <a href="#" class="product-detail"></a>
                                     </li>
 
                                     <li class="clearfix">
                                         <img src="images/resource/languages/french.png" alt="item1" />
                                         <span class="item-name">Francais</span>
-                                        <a href="shop-single.html" class="product-detail"></a>
+                                        <a href="#" class="product-detail"></a>
                                     </li>
                                 </ul>
                             </div> <!--end languages-cart -->
