--- a/en/login.html
+++ b/en/login.html
@@ -6,23 +6,23 @@
 <meta charset="utf-8">
 <title>SINAEA - Factory, Industry, and Manufacturing HTML Template | Login</title>
 <!-- Stylesheets -->
-<link href="css/bootstrap.css" rel="stylesheet">
-<link href="css/style.css" rel="stylesheet">
-<link href="css/responsive.css" rel="stylesheet">
+<link href="../css/bootstrap.css" rel="stylesheet">
+<link href="../css/style.css" rel="stylesheet">
+<link href="../css/responsive.css" rel="stylesheet">
 <!--Color Switcher Mockup-->
-<link href="css/color-switcher-design.css" rel="stylesheet">
+<link href="../css/color-switcher-design.css" rel="stylesheet">
 
 <!--Color Themes-->
-<link id="theme-color-file" href="css/color-themes/default-theme.css" rel="stylesheet">
+<link id="theme-color-file" href="../css/color-themes/default-theme.css" rel="stylesheet">
 
-<link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-<link rel="icon" href="images/favicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+<link rel="icon" href="../images/favicon.png" type="image/x-icon">
 
 <!-- Responsive -->
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-<!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+<!--[if lt IE 9]><script src="../js/respond.js"></script><![endif]-->
 </head>
 
 <body>
@@ -131,7 +131,7 @@
             <div class="outer-container">
                 <div class="main-box clearfix">
                     <div class="logo-box">
-                        <div class="logo"><a href="index-2.html"><img src="images/logo.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="index-2.html"><img src="../images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     
@@ -151,7 +151,7 @@
 
                                 <ul class="languages-cart-items">
                                     <li class="clearfix">
-                                        <img src="images/resource/products/prod-thumb-1.jpg" alt="item1" />
+                                        <img src="../images/resource/products/prod-thumb-1.jpg" alt="item1" />
                                         <span class="item-name">Popular Product</span>
                                         <span class="item-price">$30.00</span>
                                         <span class="item-quantity">Quantity: 01</span>
@@ -159,7 +159,7 @@
                                     </li>
 
                                     <li class="clearfix">
-                                        <img src="images/resource/products/prod-thumb-2.jpg" alt="item1" />
+                                        <img src="../images/resource/products/prod-thumb-2.jpg" alt="item1" />
                                         <span class="item-name">Popular Product</span>
                                         <span class="item-price">$30.00</span>
                                         <span class="item-quantity">Quantity: 01</span>
@@ -197,7 +197,7 @@
         <!-- End Search Popup -->
 
         <!--Page Title-->
-        <section class="page-title" style="background-image:url(images/background/8.jpg)">
+        <section class="page-title" style="background-image:url(../images/background/8.jpg)">
             <div class="auto-container">
                 <h2>Login</h2>
                 <ul class="page-breadcrumb">
@@ -292,7 +292,7 @@
                                 <div class="footer-column col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                     <div class="footer-widget about-widget">
                                         <div class="logo">
-                                            <a href="index-2.html"><img src="images/logo.png" alt="" /></a>
+                                            <a href="index-2.html"><img src="../images/logo.png" alt="" /></a>
                                         </div>
                                         <div class="text">
                                             <p>We have very good strength in innovative technology and tools with over 35 years of experience. We makes long-term investments goal in global companies in different sectors, mainly in Europe and other countries.</p>           
@@ -412,21 +412,21 @@
 <!-- Scroll To Top -->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-up"></span></div>
 
-<script src="js/jquery.js"></script> 
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/mixitup.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/jquery.stellar.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/TweenMax.min.js"></script>
-<script src="js/script.js"></script>
+<script src="../js/jquery.js"></script> 
+<script src="../js/popper.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/owl.js"></script>
+<script src="../js/wow.js"></script>
+<script src="../js/mixitup.js"></script>
+<script src="../js/appear.js"></script>
+<script src="../js/jquery.stellar.min.js"></script>
+<script src="../js/jquery.fancybox.js"></script>
+<script src="../js/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="../js/swiper.min.js"></script>
+<script src="../js/TweenMax.min.js"></script>
+<script src="../js/script.js"></script>
 <!-- Color Setting -->
-<script src="js/color-settings.js"></script>
+<script src="../js/color-settings.js"></script>
 </body>
 
 <!-- login10:51-->
