--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to Madi Carbon</title>
-<meta http-equiv="refresh" content="0; URL=./en/index.html">
-<link rel="canonical" href="./en/index.html">
+<title>Redirecting to Madi Carbon, English version</title>
+<meta http-equiv="refresh" content="0; URL=https://madi-carbon.github.io/Front-end/en/">
+<link rel="canonical" href="https://madi-carbon.github.io/Front-end/en/">
